statement and values

--- a/abhay.html
+++ b/abhay.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p >this is para</p>
+    <p >this is paragraph</p>
     <h1 id="a1"></h1>
     <script>
       //document.getElementById("a1").innerHTML=5+6+9;
       //window.alert(2+9);
       //alert("hello world");
-      a=40;
+      a=50;
       console.log(a);
       <button onclick="window.print()">Print this page</button>
     </script>
